            Add Serial.isConnected to check if Bluetooth/USB/etc actually connected
            Pixl.js: Remove Wiznet W5100 support from default build (there's now a espruino_#v##_pixljs_wiznet.zip without JIT enabled) to ensure we have enough flash to continue builds
            Enable nostartfiles optimisation for Pixl,MDBT42 and nRF52DK
            STM32F4: Add SDIO support
            
     2v24 : Bangle.js2: Add 'Bangle.touchRd()', 'Bangle.touchWr()'
            Bangle.js2: After Bangle.showTestScreen, put Bangle.js into a hard off state (not soft off)
            Fix for unexpected power draw on newest batch of Bangle.js devices
            Puck.js: skip CRT startup code to save ~300b
            Fix memory leak when using Pin.getInfo on a pin with ADCs (and non-reporting of analogs)
            Puck.js/Jolt.js: Ensure that firmware update ZIPs *do not* perform a self test at boot until they pass (only hex files that are used at the factory do)
            Bangle.js2: If tapping at the bottom of the screen on a menu that is <12px onscreen, choose the menu item above (#3476)
            Bangle.js: Ensure that the first button press event after a reboot is propagated to setWatch
            Fix lexing of regex at the start of a if/loop (#2529)
            ESP32: remove interrupt on/off code as it just causes a crash
            ESP32: jshPinWatch now returns correct value (event ID vs pin number)
            JS in the binary now uses jspExecuteJSFunctionCode which helps to skip a parsing step
            JS modules that are included are now pretokenised
            Bangle.js2: Now using pre-minified showRecoveryMenu and showTestScreen
            Bangle.js2: Including Layout module in internal flash

     2v23 : Fix XON/OFF thresholds to be based off the correct buffer size
            Bangle.js2: Added BANGLE2_IFLASH target for firmware using internal flash for js files (currently only partially working)